[package]
name = "batata-maintainer-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Admin/maintainer HTTP client for Batata/Nacos"

[dependencies]
batata-client = { workspace = true }
reqwest = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
tokio = { workspace = true, features = ["rt", "time", "sync"] }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
