[package]
name = "batata-mesh"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Service Mesh support for Batata (xDS protocol, Istio integration)"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-naming = { path = "../batata-naming" }

# gRPC and protobuf
tonic = { version = "0.14", features = ["transport"] }
prost = "0.14"
prost-types = "0.14"

# Async
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Concurrency
dashmap = "6.1"
parking_lot = "0.12"

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.20", features = ["v4"] }

[build-dependencies]
tonic-prost-build = "0.14"
