[package]
name = "batata-mesh"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Service Mesh support for Batata (xDS protocol, Istio integration)"

[dependencies]
batata-common = { workspace = true }
batata-naming = { workspace = true }

# gRPC and protobuf
tonic = { workspace = true, features = ["transport", "codegen"] }
prost = { workspace = true }
prost-types = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt", "sync", "time", "macros", "net"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Concurrency
dashmap = { workspace = true }
parking_lot = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

[build-dependencies]
tonic-prost-build = { workspace = true }
