[package]
name = "batata-naming-consul"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consul-compatible naming service — service discovery with datacenter/agent/catalog model"

[dependencies]
batata-foundation.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytes.workspace = true
tracing.workspace = true
dashmap.workspace = true
chrono.workspace = true
