[package]
name = "batata-naming"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Service discovery for Batata"

[dependencies]
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-persistence = { workspace = true }
batata-consistency = { workspace = true }
batata-auth = { workspace = true }
batata-server-common = { workspace = true }
batata-core = { workspace = true }

# Web framework
actix-web = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Random
fastrand = { workspace = true }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }

# gRPC
tonic = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Pattern matching
regex = { workspace = true }

# System info
sysinfo = { workspace = true }
