[package]
name = "batata-persistence"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Database entities and persistence layer for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-consistency = { path = "../batata-consistency" }

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Embedded storage
rocksdb = "0.24"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
async-trait = "0.1"
tokio = { version = "1.49", features = ["rt"] }

# Error handling
anyhow = "1.0"

# Time
chrono = "0.4"

# Hashing
md5 = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.49", features = ["rt", "macros"] }
