[package]
name = "batata-persistence"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database entities and persistence layer for Batata"

[dependencies]
batata-common = { workspace = true }
batata-consistency = { workspace = true }

# Database
sea-orm = { workspace = true }

# Embedded storage
rocksdb = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt"] }

# Error handling
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Hashing
md5 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
