[package]
name = "batata-plugin-apollo"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Apollo Config compatibility plugin for Batata"

[dependencies]
# Internal crates
batata-common = { workspace = true }
batata-plugin = { workspace = true }
batata-config = { workspace = true }
batata-persistence = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Web framework
actix-web = { workspace = true }

# Database
sea-orm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
md5 = { workspace = true }
base64 = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
