[package]
name = "batata-plugin-cloud"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Cloud native integration plugin for Batata (Kubernetes sync, Prometheus SD)"

[dependencies]
batata-server-common = { workspace = true }

# Web framework
actix-web = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }
futures = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }
