[package]
name = "batata-plugin-consul"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Consul compatibility plugin for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }
batata-plugin = { path = "../batata-plugin" }
batata-api = { path = "../batata-api" }
batata-naming = { path = "../batata-naming" }
batata-config = { path = "../batata-config" }
batata-core = { path = "../batata-core" }
batata-consistency = { path = "../batata-consistency" }

# Web framework
actix-web = "4"

# Concurrency
dashmap = "6.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# Async
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Storage
rocksdb = "0.24"

# Caching
moka = { version = "0.12", features = ["sync"] }

# Time
chrono = "0.4"

# UUID
uuid = { version = "1.20", features = ["v4"] }

# System info
sysinfo = "0.33"

# Hostname
hostname = "0.4"

[dev-dependencies]
actix-http = "3"
