[package]
name = "batata-plugin-consul"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Consul compatibility plugin for Batata"

[dependencies]
batata-common = { workspace = true }
batata-plugin = { workspace = true }
batata-api = { workspace = true }
batata-naming = { workspace = true }
batata-config = { workspace = true }
batata-core = { workspace = true }
batata-consistency = { workspace = true }

# Web framework
actix-web = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Database
sea-orm = { workspace = true }

# Storage
rocksdb = { workspace = true }

# Caching
moka = { workspace = true }

# Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# System info
sysinfo = { workspace = true }

# Hostname
hostname = { workspace = true }

# HTTP client
reqwest = { workspace = true }

[dev-dependencies]
actix-http = { workspace = true }
