[package]
name = "batata-plugin"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Plugin SPI definitions for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[dependencies]
batata-common = { path = "../batata-common" }

# Async
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }

# Concurrency
dashmap = "6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4"] }

# Regex
regex = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto for webhooks
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Random for jitter
rand = "0.9"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"
