[package]
name = "batata-plugin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin SPI definitions for Batata"

[dependencies]
batata-common = { workspace = true }

# Async
async-trait = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "macros"] }

# Concurrency
dashmap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# UUID
uuid = { workspace = true }

# Regex
regex = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Crypto for webhooks
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# Random for jitter (uses rand 0.9, different from workspace rand 0.8)
rand = "0.9"

# Logging
tracing = { workspace = true }

# Error handling
anyhow = { workspace = true }
