[package]
name = "batata-server"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Main server entry point for Batata"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[[bin]]
name = "batata-server"
path = "src/main.rs"

[dependencies]
batata-common = { path = "../batata-common" }
batata-api = { path = "../batata-api" }
batata-persistence = { path = "../batata-persistence" }
batata-auth = { path = "../batata-auth" }
batata-consistency = { path = "../batata-consistency" }
batata-core = { path = "../batata-core" }
batata-config = { path = "../batata-config" }
batata-naming = { path = "../batata-naming" }
batata-console = { path = "../batata-console" }
batata-plugin-consul = { path = "../batata-plugin-consul" }

# Web framework
actix-web = "4"
actix-rt = "2"

# gRPC
tonic = "0.14"
prost = "0.14"

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Configuration
config = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async
tokio = { version = "1.49", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

# Error handling
anyhow = "1.0"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[build-dependencies]
tonic-prost-build = "0.14"
