[package]
name = "batata-server"
version = "0.1.0"
authors = ["Tianyu Liang <124244236@qq.com>"]
edition = "2024"
description = "Batata - Nacos-compatible service discovery and configuration management server"
license = "Apache-2.0"
repository = "https://github.com/easynet-cn/batata"

[lib]
name = "batata_server"
path = "src/lib.rs"

[[bin]]
name = "batata-server"
path = "src/main.rs"

[dependencies]
# Internal crates
batata-common = { path = "../batata-common" }
batata-api = { path = "../batata-api" }
batata-persistence = { path = "../batata-persistence" }
batata-auth = { path = "../batata-auth" }
batata-consistency = { path = "../batata-consistency" }
batata-core = { path = "../batata-core" }
batata-config = { path = "../batata-config" }
batata-naming = { path = "../batata-naming" }
batata-console = { path = "../batata-console" }
batata-plugin-consul = { path = "../batata-plugin-consul" }

# Web framework
actix-web = "4"
actix-rt = "2"
actix-multipart = "0.7"
actix-service = "2.0"
actix-utils = "3.0"

# gRPC
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"
tower = "0.5"

# Database
sea-orm = { version = "1.1", features = ["sqlx-mysql", "sqlx-postgres", "runtime-tokio"] }

# Configuration
config = "0.15"
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_with = "3.16"
serde_yaml = "0.9"

# Async
tokio = { version = "1.49", features = ["full"] }
tokio-stream = "0.1"
async-trait = "0.1"
futures = "0.3"
pin-project-lite = "0.2"

# Logging & Telemetry
tracing = "0.1"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.29"

# OpenTelemetry
opentelemetry = { version = "0.28", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["tonic", "grpc-tonic", "trace", "metrics"] }
opentelemetry-semantic-conventions = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Auth
jsonwebtoken = "9"
bcrypt = "0.17"

# System info
sysinfo = "0.32"

# Utils
chrono = "0.4"
uuid = { version = "1.19", features = ["v4"] }
regex = "1.11"
base64 = "0.22"
md5 = "0.8"
bytes = "1.11"
byteorder = "1.5"
zip = "2.2"
if-addrs = "0.14"
htmlescape = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Caching
moka = { version = "0.12", features = ["future", "sync"] }
dashmap = "6.1"

# Consensus
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
rocksdb = "0.24"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "naming_bench"
harness = false

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "circuit_breaker_bench"
harness = false

[build-dependencies]
tonic-prost-build = "0.14.2"
