[package]
name = "batata-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Batata - Nacos-compatible service discovery and configuration management server"

[lib]
name = "batata_server"
path = "src/lib.rs"

[[bin]]
name = "batata-server"
path = "src/main.rs"

[dependencies]
# Internal crates
batata-common = { workspace = true }
batata-api = { workspace = true }
batata-persistence = { workspace = true }
batata-auth = { workspace = true }
batata-consistency = { workspace = true }
batata-core = { workspace = true }
batata-config = { workspace = true }
batata-naming = { workspace = true }
batata-console = { workspace = true }
batata-server-common = { workspace = true }
batata-plugin-consul = { workspace = true }
batata-plugin-apollo = { workspace = true }
batata-maintainer-client = { workspace = true }
batata-mesh = { workspace = true }

# Web framework
actix = { workspace = true }
actix-web = { workspace = true }
actix-rt = { workspace = true }
actix-multipart = { workspace = true }
actix-service = { workspace = true }
actix-utils = { workspace = true }

# gRPC
tonic = { workspace = true, features = ["transport", "tls-native-roots"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
http = { workspace = true }

# Database
sea-orm = { workspace = true }

# Configuration
config = { workspace = true }
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
serde_with = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }

# Logging & Telemetry
tracing = { workspace = true }
tracing-log = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing-bunyan-formatter = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Metrics
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

# Auth
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }

# System info
sysinfo = { workspace = true }

# Utils
chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
md5 = { workspace = true }
bytes = { workspace = true }
byteorder = { workspace = true }
zip = { workspace = true }
if-addrs = { workspace = true }
htmlescape = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Caching
moka = { workspace = true }
dashmap = { workspace = true }

# Sync primitives
parking_lot = { workspace = true }

# Consensus
openraft = { workspace = true }
rocksdb = { workspace = true }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }

[dev-dependencies]
batata-client = { workspace = true }
criterion = { workspace = true }
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[[bench]]
name = "naming_bench"
harness = false

[[bench]]
name = "auth_bench"
harness = false

[[bench]]
name = "circuit_breaker_bench"
harness = false

[build-dependencies]
tonic-prost-build = { workspace = true }
