[workspace]

[package]
name = "batata-client-tests"
version = "0.1.0"
edition = "2021"
publish = false

# Integration tests only — no library code
[[test]]
name = "config_service_test"
path = "tests/config_service_test.rs"

[[test]]
name = "naming_service_test"
path = "tests/naming_service_test.rs"

[[test]]
name = "naming_advanced_test"
path = "tests/naming_advanced_test.rs"

[[test]]
name = "fuzzy_watch_test"
path = "tests/fuzzy_watch_test.rs"

[[test]]
name = "auth_test"
path = "tests/auth_test.rs"

[[test]]
name = "change_event_test"
path = "tests/change_event_test.rs"

[[test]]
name = "config_advanced_test"
path = "tests/config_advanced_test.rs"

[[test]]
name = "redo_test"
path = "tests/redo_test.rs"

[[test]]
name = "connection_test"
path = "tests/connection_test.rs"

[[test]]
name = "traits_test"
path = "tests/traits_test.rs"

[[test]]
name = "config_listener_test"
path = "tests/config_listener_test.rs"

[[test]]
name = "instance_selection_test"
path = "tests/instance_selection_test.rs"

[[test]]
name = "service_subscribe_test"
path = "tests/service_subscribe_test.rs"

[[test]]
name = "parameter_validation_test"
path = "tests/parameter_validation_test.rs"

[[test]]
name = "weight_test"
path = "tests/weight_test.rs"

[dev-dependencies]
batata-client = { path = "../../crates/batata-client" }
batata-api = { path = "../../crates/batata-api" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
md-5 = "0.10"
const-hex = "1"
